src/test/deca/syntax/valid/homemade/test/test_lex_val_com_bf_println.deca
// Test d'un commentaire

{
    /*test*/
    println("test");
}