src/test/deca/syntax/invalid/homemade/test/test_pars_inv_affectation_float_trop_grand2.deca
{
    println(3.4028334665e38);
}